--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
         <h1>Proyecto de Ejemplo con Git</h1>
         <h2>Version de prueba</h2>
-        <h3>Header 3</h3>
+        <p>Parrafo nuevo</p>
     </main>
 </body>
 </html>
